Revision history for WWW::Mechanize

Mech now has its own mailing list at Google Groups:
http://groups.google.com/group/www-mechanize-users

{{$NEXT}}

1.78      2016-08-08 09:18:59-04:00 America/Toronto
========================================
[OTHER CHANGES]
- No changes specific to this version.  First non-develepment release in about a year.

1.77      2016-08-05 12:50:12-04:00 America/Toronto (TRIAL RELEASE)
========================================
[TESTS]
- Skip Wikipedia tests if LWP::Protocol::https is not installed.

1.76      2016-07-29 12:17:25-04:00 America/Toronto (TRIAL RELEASE)
========================================
[ENHANCEMENTS]
- Added history() and history_count() methods. (Ricardo Signes)
- click_button() now accepts ids. (Olaf Alders)
- Add a more descriptive error message when ->request is called without a
  parameter. (Max Maischein)

[DOCUMENTATION]
- Document that form_id warns in addition to returning undef when a form cannot
  be found. (Olaf Alders)
- Document use of a proxy with bin/mech-dump. (Florian Schlichting)

[OTHER CHANGES]
- New releases for this distribution are now generated by Dist::Zilla

1.75        2015-06-03
========================================
[OTHER CHANGES]

- WWW::Mechanize::Image and WWW::Mechanize::Link now have a defined $VERSION
- fixed warning about the use of the encoding pragma (new in 5.22) (RT#91971)
- fixed warning about the use of CGI::param in list context (RT#103096)


1.74        2015-01-23
========================================
[OTHER CHANGES]

- updated repository link in metadata


1.73        2013-08-24
========================================
[TESTS]

- Update t/local/back.t to use LocalServer for 404 checking to avoid fails
on win32. Fix by Matt S Trout, patient diagnostics and testing provided
by jayefuu of freenode #perl

- Blow away more proxy env vars in LocalServer, and do it on load so that
the LWP env checking doesn't happen before we've done it.

[OTHER CHANGES]
